bottom scrollbar fixing

--- a/src/App.scss
+++ b/src/App.scss
@@ -65,6 +65,7 @@ footer{
 
 .ReactVirtualized__Grid.ReactVirtualized__List,.ReactVirtualized__Grid__innerScrollContainer{
     overflow: initial !important;
+    width: 100vw !important;
 }
 
 .react-autosuggest__suggestions-container{
